// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat Items loading it renders loading icons 1`] = `
<Component
  fields={
    Array [
      Object {
        "color": "#000000",
        "description": "NETWORK_EVENTS",
        "key": "networkEvents",
        "value": null,
      },
    ]
  }
  isLoading={true}
/>
`;

exports[`Stat Items rendering kpis with charts it renders the default widget 1`] = `
<pure(Component)
  areaChart={
    Array [
      Object {
        "color": "#000000",
        "key": "uniqueSourcePrivateIps",
        "value": null,
      },
      Object {
        "color": "#000000",
        "key": "uniqueDestinationPrivateIps",
        "value": null,
      },
    ]
  }
  barChart={
    Array [
      Object {
        "color": "#000000",
        "key": "uniqueSourcePrivateIps",
        "value": null,
      },
      Object {
        "color": "#000000",
        "key": "uniqueDestinationPrivateIps",
        "value": null,
      },
    ]
  }
  description="UNIQUE_PRIVATE_IPS"
  fields={
    Array [
      Object {
        "color": "#000000",
        "description": "UNIQUE_SOURCE_PRIVATE_IPS",
        "key": "uniqueSourcePrivateIps",
        "value": null,
      },
      Object {
        "color": "#000000",
        "description": "UNIQUE_DESTINATION_PRIVATE_IPS",
        "key": "uniqueDestinationPrivateIps",
        "value": null,
      },
    ]
  }
  isLoading={false}
>
  <Component
    areaChart={
      Array [
        Object {
          "color": "#000000",
          "key": "uniqueSourcePrivateIps",
          "value": null,
        },
        Object {
          "color": "#000000",
          "key": "uniqueDestinationPrivateIps",
          "value": null,
        },
      ]
    }
    barChart={
      Array [
        Object {
          "color": "#000000",
          "key": "uniqueSourcePrivateIps",
          "value": null,
        },
        Object {
          "color": "#000000",
          "key": "uniqueDestinationPrivateIps",
          "value": null,
        },
      ]
    }
    description="UNIQUE_PRIVATE_IPS"
    fields={
      Array [
        Object {
          "color": "#000000",
          "description": "UNIQUE_SOURCE_PRIVATE_IPS",
          "key": "uniqueSourcePrivateIps",
          "value": null,
        },
        Object {
          "color": "#000000",
          "description": "UNIQUE_DESTINATION_PRIVATE_IPS",
          "key": "uniqueDestinationPrivateIps",
          "value": null,
        },
      ]
    }
    isLoading={false}
  >
    <EuiFlexItem
      key="stat-items-undefined"
    >
      <div
        className="euiFlexItem"
      >
        <EuiPanel
          grow={true}
          hasShadow={false}
          paddingSize="m"
        >
          <div
            className="euiPanel euiPanel--paddingMedium"
          >
            <EuiStat
              description={
                <EuiTitle
                  size="xxs"
                >
                  <span>
                    UNIQUE_PRIVATE_IPS
                  </span>
                </EuiTitle>
              }
              reverse={false}
              textAlign="left"
              title={
                <EuiFlexGroup
                  component="span"
                  justifyContent="spaceBetween"
                >
                  <EuiFlexItem
                    component="span"
                  >
                    <EuiFlexGroup
                      alignItems="center"
                      component="span"
                      data-test-subj="stat-title"
                      gutterSize="m"
                      justifyContent="spaceBetween"
                    >
                      <EuiFlexItem
                        component="span"
                        grow={2}
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          component="span"
                          gutterSize="m"
                        >
                          <EuiFlexItem
                            component="span"
                          >
                            <EuiIcon
                              color="#000000"
                              size="xl"
                              type="stopFilled"
                            />
                          </EuiFlexItem>
                          <EuiFlexItem
                            component="span"
                          >
                            <pure(Component)
                              isLoading={false}
                              value={null}
                            />
                          </EuiFlexItem>
                        </EuiFlexGroup>
                      </EuiFlexItem>
                      <EuiFlexItem
                        component="span"
                        grow={4}
                      >
                        UNIQUE_SOURCE_PRIVATE_IPS
                      </EuiFlexItem>
                    </EuiFlexGroup>
                  </EuiFlexItem>
                  <EuiFlexItem
                    component="span"
                  >
                    <EuiFlexGroup
                      alignItems="center"
                      component="span"
                      data-test-subj="stat-title"
                      gutterSize="m"
                      justifyContent="spaceBetween"
                    >
                      <EuiFlexItem
                        component="span"
                        grow={2}
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          component="span"
                          gutterSize="m"
                        >
                          <EuiFlexItem
                            component="span"
                          >
                            <EuiIcon
                              color="#000000"
                              size="xl"
                              type="stopFilled"
                            />
                          </EuiFlexItem>
                          <EuiFlexItem
                            component="span"
                          >
                            <pure(Component)
                              isLoading={false}
                              value={null}
                            />
                          </EuiFlexItem>
                        </EuiFlexGroup>
                      </EuiFlexItem>
                      <EuiFlexItem
                        component="span"
                        grow={4}
                      >
                        UNIQUE_DESTINATION_PRIVATE_IPS
                      </EuiFlexItem>
                    </EuiFlexGroup>
                  </EuiFlexItem>
                </EuiFlexGroup>
              }
              titleColor="default"
              titleSize="m"
            >
              <div
                className="euiStat euiStat--leftAligned"
              >
                <EuiText
                  className="euiStat__description"
                  size="s"
                >
                  <div
                    className="euiText euiText--small euiStat__description"
                  >
                    <p>
                      <EuiTitle
                        size="xxs"
                      >
                        <span
                          className="euiTitle euiTitle--xxsmall"
                        >
                          UNIQUE_PRIVATE_IPS
                        </span>
                      </EuiTitle>
                    </p>
                  </div>
                </EuiText>
                <EuiTitle
                  className="euiStat__title"
                  size="m"
                >
                  <p
                    className="euiTitle euiTitle--medium euiStat__title"
                  >
                    <EuiFlexGroup
                      component="span"
                      justifyContent="spaceBetween"
                    >
                      <span
                        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                      >
                        <EuiFlexItem
                          component="span"
                          key="stat-items-field-uniqueSourcePrivateIps"
                        >
                          <span
                            className="euiFlexItem"
                          >
                            <EuiFlexGroup
                              alignItems="center"
                              component="span"
                              data-test-subj="stat-title"
                              gutterSize="m"
                              justifyContent="spaceBetween"
                            >
                              <span
                                className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                                data-test-subj="stat-title"
                              >
                                <EuiFlexItem
                                  component="span"
                                  grow={2}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow2"
                                  >
                                    <EuiFlexGroup
                                      alignItems="center"
                                      component="span"
                                      gutterSize="m"
                                    >
                                      <span
                                        className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                                      >
                                        <EuiFlexItem
                                          component="span"
                                        >
                                          <span
                                            className="euiFlexItem"
                                          >
                                            <EuiIcon
                                              color="#000000"
                                              size="xl"
                                              type="stopFilled"
                                            >
                                              <stopFilled
                                                className="euiIcon euiIcon--xLarge"
                                                focusable="false"
                                                height="16"
                                                style={
                                                  Object {
                                                    "fill": "#000000",
                                                  }
                                                }
                                                viewBox="0 0 16 16"
                                                width="16"
                                                xmlns="http://www.w3.org/2000/svg"
                                              >
                                                <svg
                                                  className="euiIcon euiIcon--xLarge"
                                                  focusable="false"
                                                  height="16"
                                                  style={
                                                    Object {
                                                      "fill": "#000000",
                                                    }
                                                  }
                                                  viewBox="0 0 16 16"
                                                  width="16"
                                                  xmlns="http://www.w3.org/2000/svg"
                                                >
                                                  <rect
                                                    fillRule="evenodd"
                                                    height="12"
                                                    rx="2"
                                                    width="12"
                                                    x="2"
                                                    y="2"
                                                  />
                                                </svg>
                                              </stopFilled>
                                            </EuiIcon>
                                          </span>
                                        </EuiFlexItem>
                                        <EuiFlexItem
                                          component="span"
                                        >
                                          <span
                                            className="euiFlexItem"
                                          >
                                            <pure(Component)
                                              isLoading={false}
                                              value={null}
                                            >
                                              <Component
                                                isLoading={false}
                                                value={null}
                                              >
                                                <span>
                                                  --
                                                </span>
                                              </Component>
                                            </pure(Component)>
                                          </span>
                                        </EuiFlexItem>
                                      </span>
                                    </EuiFlexGroup>
                                  </span>
                                </EuiFlexItem>
                                <EuiFlexItem
                                  component="span"
                                  grow={4}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow4"
                                  >
                                    UNIQUE_SOURCE_PRIVATE_IPS
                                  </span>
                                </EuiFlexItem>
                              </span>
                            </EuiFlexGroup>
                          </span>
                        </EuiFlexItem>
                        <EuiFlexItem
                          component="span"
                          key="stat-items-field-uniqueDestinationPrivateIps"
                        >
                          <span
                            className="euiFlexItem"
                          >
                            <EuiFlexGroup
                              alignItems="center"
                              component="span"
                              data-test-subj="stat-title"
                              gutterSize="m"
                              justifyContent="spaceBetween"
                            >
                              <span
                                className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                                data-test-subj="stat-title"
                              >
                                <EuiFlexItem
                                  component="span"
                                  grow={2}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow2"
                                  >
                                    <EuiFlexGroup
                                      alignItems="center"
                                      component="span"
                                      gutterSize="m"
                                    >
                                      <span
                                        className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                                      >
                                        <EuiFlexItem
                                          component="span"
                                        >
                                          <span
                                            className="euiFlexItem"
                                          >
                                            <EuiIcon
                                              color="#000000"
                                              size="xl"
                                              type="stopFilled"
                                            >
                                              <stopFilled
                                                className="euiIcon euiIcon--xLarge"
                                                focusable="false"
                                                height="16"
                                                style={
                                                  Object {
                                                    "fill": "#000000",
                                                  }
                                                }
                                                viewBox="0 0 16 16"
                                                width="16"
                                                xmlns="http://www.w3.org/2000/svg"
                                              >
                                                <svg
                                                  className="euiIcon euiIcon--xLarge"
                                                  focusable="false"
                                                  height="16"
                                                  style={
                                                    Object {
                                                      "fill": "#000000",
                                                    }
                                                  }
                                                  viewBox="0 0 16 16"
                                                  width="16"
                                                  xmlns="http://www.w3.org/2000/svg"
                                                >
                                                  <rect
                                                    fillRule="evenodd"
                                                    height="12"
                                                    rx="2"
                                                    width="12"
                                                    x="2"
                                                    y="2"
                                                  />
                                                </svg>
                                              </stopFilled>
                                            </EuiIcon>
                                          </span>
                                        </EuiFlexItem>
                                        <EuiFlexItem
                                          component="span"
                                        >
                                          <span
                                            className="euiFlexItem"
                                          >
                                            <pure(Component)
                                              isLoading={false}
                                              value={null}
                                            >
                                              <Component
                                                isLoading={false}
                                                value={null}
                                              >
                                                <span>
                                                  --
                                                </span>
                                              </Component>
                                            </pure(Component)>
                                          </span>
                                        </EuiFlexItem>
                                      </span>
                                    </EuiFlexGroup>
                                  </span>
                                </EuiFlexItem>
                                <EuiFlexItem
                                  component="span"
                                  grow={4}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow4"
                                  >
                                    UNIQUE_DESTINATION_PRIVATE_IPS
                                  </span>
                                </EuiFlexItem>
                              </span>
                            </EuiFlexGroup>
                          </span>
                        </EuiFlexItem>
                      </span>
                    </EuiFlexGroup>
                  </p>
                </EuiTitle>
              </div>
            </EuiStat>
            <EuiHorizontalRule>
              <hr
                className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
              />
            </EuiHorizontalRule>
            <EuiFlexGroup
              gutterSize="none"
            >
              <div
                className="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <EuiFlexItem
                  grow={5}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrow5"
                  >
                    <pure(Component)
                      barChart={
                        Array [
                          Object {
                            "color": "#000000",
                            "key": "uniqueSourcePrivateIps",
                            "value": null,
                          },
                          Object {
                            "color": "#000000",
                            "key": "uniqueDestinationPrivateIps",
                            "value": null,
                          },
                        ]
                      }
                    >
                      <Component
                        barChart={
                          Array [
                            Object {
                              "color": "#000000",
                              "key": "uniqueSourcePrivateIps",
                              "value": null,
                            },
                            Object {
                              "color": "#000000",
                              "key": "uniqueDestinationPrivateIps",
                              "value": null,
                            },
                          ]
                        }
                      >
                        <AutoSizer
                          content={true}
                          detectAnyWindowResize={false}
                        >
                          <styled.div
                            data-test-subj="wrapped-by-auto-sizer"
                            innerRef={[Function]}
                          >
                            <div
                              className="sc-bxivhb fLNTGm"
                              data-test-subj="wrapped-by-auto-sizer"
                            >
                              <pure(Component)
                                data={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "key": "uniqueSourcePrivateIps",
                                      "value": null,
                                    },
                                    Object {
                                      "color": "#000000",
                                      "key": "uniqueDestinationPrivateIps",
                                      "value": null,
                                    },
                                  ]
                                }
                              >
                                <Component
                                  data={
                                    Array [
                                      Object {
                                        "color": "#000000",
                                        "key": "uniqueSourcePrivateIps",
                                        "value": null,
                                      },
                                      Object {
                                        "color": "#000000",
                                        "key": "uniqueDestinationPrivateIps",
                                        "value": null,
                                      },
                                    ]
                                  }
                                />
                              </pure(Component)>
                              <styled.div>
                                <div
                                  className="sc-ifAKCX kHhUkS"
                                />
                              </styled.div>
                            </div>
                          </styled.div>
                        </AutoSizer>
                      </Component>
                    </pure(Component)>
                  </div>
                </EuiFlexItem>
                <EuiFlexItem
                  grow={5}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrow5"
                  >
                    <pure(Component)
                      areaChart={
                        Array [
                          Object {
                            "color": "#000000",
                            "key": "uniqueSourcePrivateIps",
                            "value": null,
                          },
                          Object {
                            "color": "#000000",
                            "key": "uniqueDestinationPrivateIps",
                            "value": null,
                          },
                        ]
                      }
                    >
                      <Component
                        areaChart={
                          Array [
                            Object {
                              "color": "#000000",
                              "key": "uniqueSourcePrivateIps",
                              "value": null,
                            },
                            Object {
                              "color": "#000000",
                              "key": "uniqueDestinationPrivateIps",
                              "value": null,
                            },
                          ]
                        }
                      >
                        <AutoSizer
                          content={true}
                          detectAnyWindowResize={false}
                        >
                          <styled.div
                            data-test-subj="wrapped-by-auto-sizer"
                            innerRef={[Function]}
                          >
                            <div
                              className="sc-bxivhb fLNTGm"
                              data-test-subj="wrapped-by-auto-sizer"
                            >
                              <pure(Component)
                                data={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "key": "uniqueSourcePrivateIps",
                                      "value": null,
                                    },
                                    Object {
                                      "color": "#000000",
                                      "key": "uniqueDestinationPrivateIps",
                                      "value": null,
                                    },
                                  ]
                                }
                              >
                                <Component
                                  data={
                                    Array [
                                      Object {
                                        "color": "#000000",
                                        "key": "uniqueSourcePrivateIps",
                                        "value": null,
                                      },
                                      Object {
                                        "color": "#000000",
                                        "key": "uniqueDestinationPrivateIps",
                                        "value": null,
                                      },
                                    ]
                                  }
                                />
                              </pure(Component)>
                              <styled.div>
                                <div
                                  className="sc-ifAKCX kHhUkS"
                                />
                              </styled.div>
                            </div>
                          </styled.div>
                        </AutoSizer>
                      </Component>
                    </pure(Component)>
                  </div>
                </EuiFlexItem>
              </div>
            </EuiFlexGroup>
          </div>
        </EuiPanel>
      </div>
    </EuiFlexItem>
  </Component>
</pure(Component)>
`;

exports[`Stat Items rendering kpis without charts it renders the default widget 1`] = `
<pure(Component)
  description="UNIQUE_PRIVATE_IPS"
  fields={
    Array [
      Object {
        "key": "uniqueSourcePrivateIps",
        "value": null,
      },
    ]
  }
  isLoading={false}
>
  <Component
    description="UNIQUE_PRIVATE_IPS"
    fields={
      Array [
        Object {
          "key": "uniqueSourcePrivateIps",
          "value": null,
        },
      ]
    }
    isLoading={false}
  >
    <EuiFlexItem
      key="stat-items-undefined"
    >
      <div
        className="euiFlexItem"
      >
        <EuiPanel
          grow={true}
          hasShadow={false}
          paddingSize="m"
        >
          <div
            className="euiPanel euiPanel--paddingMedium"
          >
            <EuiStat
              description={
                <EuiTitle
                  size="xxs"
                >
                  <span>
                    UNIQUE_PRIVATE_IPS
                  </span>
                </EuiTitle>
              }
              reverse={false}
              textAlign="left"
              title={
                <EuiFlexGroup
                  component="span"
                  justifyContent="spaceBetween"
                >
                  <EuiFlexItem
                    component="span"
                  >
                    <EuiFlexGroup
                      alignItems="center"
                      component="span"
                      data-test-subj="stat-title"
                      gutterSize="m"
                      justifyContent="spaceBetween"
                    >
                      <EuiFlexItem
                        component="span"
                        grow={2}
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          component="span"
                          gutterSize="m"
                        >
                          <EuiFlexItem
                            component="span"
                          >
                            <pure(Component)
                              isLoading={false}
                              value={null}
                            />
                          </EuiFlexItem>
                        </EuiFlexGroup>
                      </EuiFlexItem>
                      <EuiFlexItem
                        component="span"
                        grow={4}
                      />
                    </EuiFlexGroup>
                  </EuiFlexItem>
                </EuiFlexGroup>
              }
              titleColor="default"
              titleSize="m"
            >
              <div
                className="euiStat euiStat--leftAligned"
              >
                <EuiText
                  className="euiStat__description"
                  size="s"
                >
                  <div
                    className="euiText euiText--small euiStat__description"
                  >
                    <p>
                      <EuiTitle
                        size="xxs"
                      >
                        <span
                          className="euiTitle euiTitle--xxsmall"
                        >
                          UNIQUE_PRIVATE_IPS
                        </span>
                      </EuiTitle>
                    </p>
                  </div>
                </EuiText>
                <EuiTitle
                  className="euiStat__title"
                  size="m"
                >
                  <p
                    className="euiTitle euiTitle--medium euiStat__title"
                  >
                    <EuiFlexGroup
                      component="span"
                      justifyContent="spaceBetween"
                    >
                      <span
                        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                      >
                        <EuiFlexItem
                          component="span"
                          key="stat-items-field-uniqueSourcePrivateIps"
                        >
                          <span
                            className="euiFlexItem"
                          >
                            <EuiFlexGroup
                              alignItems="center"
                              component="span"
                              data-test-subj="stat-title"
                              gutterSize="m"
                              justifyContent="spaceBetween"
                            >
                              <span
                                className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                                data-test-subj="stat-title"
                              >
                                <EuiFlexItem
                                  component="span"
                                  grow={2}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow2"
                                  >
                                    <EuiFlexGroup
                                      alignItems="center"
                                      component="span"
                                      gutterSize="m"
                                    >
                                      <span
                                        className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                                      >
                                        <EuiFlexItem
                                          component="span"
                                        >
                                          <span
                                            className="euiFlexItem"
                                          >
                                            <pure(Component)
                                              isLoading={false}
                                              value={null}
                                            >
                                              <Component
                                                isLoading={false}
                                                value={null}
                                              >
                                                <span>
                                                  --
                                                </span>
                                              </Component>
                                            </pure(Component)>
                                          </span>
                                        </EuiFlexItem>
                                      </span>
                                    </EuiFlexGroup>
                                  </span>
                                </EuiFlexItem>
                                <EuiFlexItem
                                  component="span"
                                  grow={4}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow4"
                                  />
                                </EuiFlexItem>
                              </span>
                            </EuiFlexGroup>
                          </span>
                        </EuiFlexItem>
                      </span>
                    </EuiFlexGroup>
                  </p>
                </EuiTitle>
              </div>
            </EuiStat>
            <EuiFlexGroup
              gutterSize="none"
            >
              <div
                className="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
              />
            </EuiFlexGroup>
          </div>
        </EuiPanel>
      </div>
    </EuiFlexItem>
  </Component>
</pure(Component)>
`;
